fix: remove active outline on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,3 +41,19 @@ ul {
   padding-right: var(--space-5);
   padding-left: var(--space-5);
 }
+
+@media (pointer: coarse) {
+  /* stylelint-disable-next-line selector-class-pattern */
+  .rt-BaseButton:where(.rt-variant-solid):where(
+      :active:not([data-state='open'])
+    ) {
+    outline-style: none;
+  }
+
+  /* stylelint-disable-next-line selector-class-pattern */
+  .rt-Link:where(:any-link, button):where(
+      :active:not(:focus-visible, [data-state='open'])
+    ) {
+    outline-style: none;
+  }
+}
